--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -17,7 +17,7 @@ configure_file(
 include_directories("${PROJECT_BINARY_DIR}")
 
 set(EXECUTABLE_NAME "TheAdventuresOfBlinky")
-add_executable(${EXECUTABLE_NAME} Source/Main.cpp)
+add_executable(${EXECUTABLE_NAME} Source/Main.cpp Source/Game.cpp Source/World.cpp Source/Command_Empty.cpp Source/InputHandler.cpp)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
 
