--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -4,8 +4,6 @@ if (NOT_CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build (Debug or Release)" FORCE)
 endif()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
-
 project(TheAdventuresOfBlinky)
 
 set(dot_VERSION_MAJOR 0)
@@ -23,6 +21,12 @@ add_executable(${EXECUTABLE_NAME} Source/Main.cpp Source/Game.cpp Source/World.c
  Source/InputHandler.cpp Source/Maze.cpp)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
+
+add_custom_command(TARGET ${EXECUTABLE_NAME} POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_directory
+		${CMAKE_SOURCE_DIR}/Media Media)
 
 find_package(SFML 2 REQUIRED system window graphics network audio)
 if (SFML_FOUND)
